fixed gaps

--- a/Swafe1/src/app/modules/credit-card/components/credit-card-add/credit-card-add.component.css
+++ b/Swafe1/src/app/modules/credit-card/components/credit-card-add/credit-card-add.component.css
@@ -11,3 +11,7 @@
     white-space: nowrap;
     padding-top: 10px;
 }
+
+.item-wrapper{
+    width: 45%;
+}
